<resources>
    <string name="app_name">i-EZ</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tab_label_my_air_condition">我的空调</string>
    <string name="tab_label_scene_mode">场景模式</string>
    <string name="tab_label_set_time">智能定时</string>
    <string name="tab_label_setting">配置设置</string>
    <string name="setting_home_setting">家的设置</string>
    <string name="software_page">软件界面个性化</string>
    <string name="device_list">设备列表</string>
    <string name="add_device">+ 添加i-EZ控制器</string>
    <string name="add_device_title">添加新i-EZ控制器</string>
    <string name="text_part1">您的建议或是技术问题对我们来说都十分的重要。\n
            收到您的邮件将是我们万分的荣幸。\n</string>
    <string name="text_part2">此软件需通过D-Controls空调控制主机实现相应\n控制功能。本软件中所涉及的界面及交互品牌名称\n
        均是各自持有者的商标、注册商标或商标名称。\n
        设计和功能如有变更，恕不另行通知！\n
        版权所有@2015杭州迪浩斯科技有限公司</string>
    <string name="text_address">info@d-controls.com</string>
    <string name="text_version">- Version V1.0.0906 -</string>
    <string name="nick_name">昵称</string>
    <string name="gender">性别</string>
    <string name="change_birth">修改生日</string>
    <string name="change_phone">修改注册手机</string>
    <string name="change_password">修改登录密码</string>
    <string name="change_email">修改电子邮箱</string>
    <string name="common_agree_clause">使用条款和隐私政策</string>
    <string name="quit_account">退出账号</string>
    <string name="home">家</string>
    <string name="connect_status">连接状态</string>
    <string name="add_new_home">添加新的家</string>
    <string name="software_info">软件信息</string>
    <string name="fill_user_info">完善个人资料</string>
    <string name="home_basic_info">基本信息</string>
    <string name="name">名称</string>
    <string name="delete_home">删除家</string>
    <string name="delete_info">删除后，家和家里i-EZ控制器的所有信息均无法恢复配置</string>
    <string name="add_group">添加新群组</string>
    <string name="add_explain_text">\n自动搜索新i-EZ控制器:\n如果i-EZ控制器首次使用，请通过自动搜索新i-EZ控制器的方式添加。在自动搜索前，请确保i-EZ控制器已正常工作，并通过网线或WiFi的方式与路由器连接成功，只有保证手机、平板和i-EZ控制器在同一局域网内，i-EZ控制器才能被搜索到。\n\n扫一扫:\n第一个添加i-EZ控制器的用户为管理员，管理员可以生成i-EZ控制器的二维码，其他用户扫描二维码后才可以添加i-EZ控制器。\n\n二维码：\n配置设置->i-EZ控制器->设备二维码</string>
    <string name="auto_find_device">自动搜索空调控制主机</string>
    <string name="scan_scan">扫一扫</string>
    <string name="home_name">家的名称</string>
    <string name="prompt_password">密码</string>
    <string name="action_sign_in">登录</string>
    <string name="remember_psd">记住密码</string>
    <string name="forget_psd">忘记密码</string>
    <string name="prompt_user_name">手机号</string>
    <string name="toast_inf_no_net">无法连接到互联网， 请检查网络设置</string>
    <string name="toast_inf_net_data_error">数据传输出错，重试</string>
    <string name="toast_inf_unknown_net_error">未知网络错误，请稍后重试</string>
    <string name="toast_inf_download_file_error">下载文件错误</string>
    <string name="toast_inf_cannot_delete_last_home">无法删除最后一个家</string>
    <string name="register_agree">我已阅读和同意</string>
    <string name="get_verify_code">获取验证码</string>
    <string name="register_verification_code_hint">请输入验证码</string>
    <string name="register_password_hint">请输入密码</string>
    <string name="confirm_password_hint">请再次输入密码</string>
    <string name="register_password_info">密码区分大小写，长度为6至16位</string>
    <string name="register_new_user">注册新用户</string>
    <string name="find_password">找回密码</string>
    <string name="pls_read_clause">请先阅读并同意使用条款和隐私政策</string>
    <string name="pls_input_phone">请输入手机号</string>
    <string name="pls_input_right_phone">请输入正确的手机号</string>
    <string name="mobile_number_is_changed">手机号码已改变，请重新获取验证码</string>
    <string name="pls_input_email">请输入邮箱地址</string>
    <string name="pls_input_right_email">请输入正确的邮箱地址</string>
    <string name="pls_input_verify_code">请输入验证码</string>
    <string name="pls_input_right_verify_code">请输入正确的验证码</string>
    <string name="pls_input_psd">请输入密码</string>
    <string name="pls_input_length_psd">请输入6-16位的密码</string>
    <string name="pls_input_psd_again">请再次输入密码</string>
    <string name="differ_two_psd">前后两次输入的密码不一致，请重新输入</string>
    <string name="forbid_psd_blank">密码中不能包括空格</string>
    <string name="send_verify_code">验证码已发送</string>
    <string name="phone_already_exist">该手机号已被注册</string>
    <string name="set_psd_success">设置密码成功</string>
    <string name="login_failure">登录失败</string>
    <string name="register_phone_number_hint">请输入手机号</string>
    <string name="init_file_error">初始化配置文件错误</string>
    <string name="user_name_empty_info">请输入手机号</string>
    <string name="password_empty_info">请输入密码</string>
    <string name="pls_input_group_name">请输入群组名称</string>
    <string name="make_sure">确定</string>
    <string name="cancel">取消</string>
    <string name="change_name">修改名称</string>
    <string name="delete">删除</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="new_room">新建房间</string>
    <string name="is_delete_room">\n 确定要删除该房间吗？\n</string>
    <string name="change_user_name_failure">修改昵称失败</string>
    <string name="pls_input_nickname">请输入昵称</string>
    <string name="nickname_length_too_long">输入昵称过长，不能超过10个汉字或20个字母</string>
    <string name="change_user_sex_failure">修改性别失败</string>
    <string name="is_quit_account">\n 确定要退出账号吗？\n</string>
    <string name="change_user_birthday_failure">修改生日失败</string>
    <string name="change_email_failure">修改电子邮箱失败</string>
    <string name="add_home_text">给家取个名字</string>
    <string name="old_password">旧密码</string>
    <string name="make_sure_new_psd">确认新的登录密码</string>
    <string name="set_new_psd">设置新的登录密码</string>
    <string name="oldPasswordEmptyInf">请输入原密码</string>
    <string name="oldPasswordErrorInf">原密码错误</string>
    <string name="oldPassWordEqualNewPassword">新密码与旧密码相同</string>
    <string name="where_get_icon">从哪里获取图片</string>
    <string name="camera">相机</string>
    <string name="album">相册</string>
    <string name="info_text">通知</string>
    <string name="family_text">家庭组</string>
    <string name="delete_msg">管理员可以通过长按成员头像实现删除</string>
    <string name="member">成员</string>
    <string name="admin">管理员</string>
    <string name="delete_member1">\n确定要删除成员</string>
    <string name="delete_member2">吗？\n</string>
    <string name="default_temp">25℃</string>
    <string name="real_temp">实际温度：</string>
    <string name="temp">温度</string>
    <string name="on_off">开关</string>
    <string name="cool">制冷</string>
    <string name="low_wind">低风</string>
    <string name="edit_scene">编辑场景</string>
    <string name="scene_name_hint">场景名称</string>
    <string name="choose_scene_text">空调状态设置</string>
    <string name="upload_success">上传成功</string>
    <string name="upload_failure">上传失败</string>
    <string name="heat">制热</string>
    <string name="dry">除湿</string>
    <string name="wind">送风</string>
    <string name="medium_wind">中风</string>
    <string name="high_wind">高风</string>
    <string name="temp_symbol">℃</string>
    <string name="repeat">重复</string>
    <string name="not_repeat">不重复</string>
    <string name="week_name">周</string>
    <string name="on">开机</string>
    <string name="off">关机</string>
    <string name="clock_name_hint">定时名称</string>
    <string name="air_mode">空调状态设置</string>
    <string name="choose_clock_text">选择需要定时的空调</string>
    <string name="to_do_control_together">将对本场景执行一键式集中控制</string>
    <string name="is_to_do_control">\n是否要执行?\n</string>
    <string name="pls_input_scene_name">请输入场景名称</string>
    <string name="scene_name_length_too_long">场景名称不能超过10个汉字或20个字母</string>
    <string name="pls_input_clock_name">请输入定时名称</string>
    <string name="clock_name_length_too_long">定时名称长度不能超过5个汉字或10个字母</string>
    <string name="is_delete_scene">\n确定要删除该场景吗？\n</string>
    <string name="is_delete_clock">\n确定要删除该定时吗？\n</string>
    <string name="Monday">周一</string>
    <string name="Tuesday">周二</string>
    <string name="Wednesday">周三</string>
    <string name="Thursday">周四</string>
    <string name="Friday">周五</string>
    <string name="Saturday">周六</string>
    <string name="Sunday">周日</string>
    <string name="home_name_empty_info">家名称不能为空</string>
    <string name="choose_clock_air_mode">空调定时状态设置</string>
    <string name="choose_scene_air_mode">选择空调场景模式</string>
    <string name="delete_push_data_info">删除通知</string>
    <string name="failure">失败</string>
    <string name="success">成功</string>
    <string name="check_push_data_failure">无法获取服务器数据</string>
    <string name="set_temp">设定温度</string>
    <string name="set_mode">模式</string>
    <string name="set_fan">风速</string>
    <string name="text_version_hit">i-EZ\n- Version V1.0.070801 - \n\n\nPQ-222</string>
    <string name="text_part2_hit">此软件需通过日立i-EZ控制器实现相应控制\n功能。本软件中所涉及的界面及交互品牌名称\n
        均是各自持有者的商标、注册商标或商标名称。\n
        设计和功能如有变更，恕不另行通知！</string>
    <string name="text_part1_hit">服务热线： 400-860-1111\n 版权所有@2015 青岛海信日立空调系统有限公司</string>
    <string name="none">——</string>
    <string name="home_name_too_long_info">家的名称长度不能超过10个汉字或20个字母</string>
    <string name="host_device">设备管理器：</string>
    <string name="device_manage">设备管理</string>
    <string name="manager_text">你是此设备的管理者</string>
    <string name="host_device_name">设备名称</string>
    <string name="host_device_ip">IP地址</string>
    <string name="qr_code">设备二维码</string>
    <string name="manager_text2">只有设备的管理者才能发送邀请码，让其他用户添加设备</string>
    <string name="scan_device">共扫描室内机</string>
    <string name="delete_text">删除设备后，相关的配置信息将会消失（包括场景，软件界面个性化信息等）</string>
    <string name="delete_host_device">删除本设备</string>
    <string name="device_symbol">台</string>
    <string name="is_delete_host_device">\n您是管理员，删除设备后，第一位成员将成为管理员，确定删除吗？\n</string>
    <string name="is_search_air_condition">\n是否搜索家中的空调\n</string>
    <string name="tip">提示</string>
    <string name="tip_bind_hostdevice_ok">添加成功</string>
    <string name="is_delete_section">\n确定要删除该楼层吗？\n</string>
    <string name="qr_code_time_text">二维码有效时间为5分钟</string>
    <string name="search_tip">请操作墙面上空调有线遥控器，软件中对应的空调小图标会闪烁！</string>
    <string name="search_indoor_device">搜索室内机</string>
    <string name="indoor_device_manage">空调室内机管理</string>
    <string name="rename_indoor_device">请对空调室内机进行重命名：\n（请勿使用特殊字符）</string>
    <string name="bind_device">绑定设备管理器</string>
    <string name="host_list">设备管理器列表</string>
    <string name="search_host_device_failed">获取主机失败</string>
    <string name="device_already_exist">空调已存在</string>
    <string name="settingFragmentHasHostNoDevice">成功连接服务器，未添加i-EZ控制器</string>
    <string name="settingFragmentNoHostNoDevice">无法连接服务器，未添加i-EZ控制器</string>
    <string name="settingFragmentWifiConnectDevice">通过wifi远程控制</string>
    <string name="settingFragmentMobileConnectDevice">通过移动网络远程控制</string>
    <string name="settingFragmentMobileConnectDevice2">通过2G网络远程控制</string>
    <string name="settingFragmentMobileConnectDevice3">通过3G网络远程控制</string>
    <string name="settingFragmentMobileConnectDevice4">通过4G网络远程控制</string>
    <string name="settingFragmentWifiUdpConnect">通过局域网控制</string>
    <string name="settingFragmentConnectServer">i-EZ控制器未联网</string>
    <string name="settingFragmentNoDevice">无i-EZ控制器</string>
    <string name="settingFragmentWifiNoServer">APP正使用WiFi，但无法连接服务器</string>
    <string name="settingFragmentCannotControl">手机无法连接服务器，且局域网无法控制</string>
    <string name="settingFragmentUnConnect">手机未联网</string>
    <string name="host_name_empty_info">设备管理器的名称不能为空</string>
    <string name="host_name_too_long_info">设备管理器的名称长度不能超过10个汉字或20个字母</string>
    <string name="pls_add_air_to_room">房间里没有空调，请先添加空调到房间里！</string>
    <string name="fail_to_fetch_aircondition">连接i-EZ控制器失败，获取不到房间空调状态</string>
    <string name="unfetch_real_temp">获取实际温度失败</string>
    <string name="toast_inf_complete_user_inf">请完善用户信息</string>
    <string name="unknow">未填写</string>
    <string name="toast_inf_delete_device_failed">删除设备失败</string>
    <string name="control_room_fail">控制房间失败</string>
    <string name="section_device_num1">本设备共有</string>
    <string name="section_device_num2">台空调机\n拖拽空调到空白区域添加新房间</string>
</resources>