<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/male"
        android:text="@string/male"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/female"
        android:text="@string/female"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/cancel"
        android:text="@string/cancel"
        android:gravity="center"
        android:layout_width="100dp"
        android:layout_height="wrap_content" />

</LinearLayout>