<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ac.airconditionsuit.app.view.CommonTopBar
        android:id="@id/default_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize" />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_below="@id/default_top_bar"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        style="@style/white_text_view_layout"
        android:hint="@string/old_password"
        android:inputType="textPassword"
        android:id="@+id/old_password_text"/>

    <TextView
        android:id="@+id/forget_psd"
        android:layout_below="@+id/old_password_text"
        android:gravity="right|center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginTop="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/delete_red_hit"
        android:textSize="16sp"
        android:text="@string/forget_psd"
        />

    <EditText
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/forget_psd"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        style="@style/white_text_view_layout"
        android:hint="@string/set_new_psd"
        android:inputType="textPassword"
        android:id="@+id/new_password"/>

    <EditText
        android:layout_marginTop="1dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/new_password"
        android:layout_height="48dp"
        android:paddingLeft="8dp"
        android:paddingRight="8dp"
        style="@style/white_text_view_layout"
        android:hint="@string/make_sure_new_psd"
        android:inputType="textPassword"
        android:id="@+id/new_password_again"/>

    <TextView
        android:layout_below="@+id/new_password_again"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="8dp"
        android:layout_marginTop="8dp"
        android:paddingRight="8dp"
        android:textColor="@color/text_color_gray"
        android:textSize="16sp"
        android:text="@string/register_password_info"
        />

</RelativeLayout>