<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/user_info_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ac.airconditionsuit.app.view.CommonTopBar
        android:id="@+id/default_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
    </ac.airconditionsuit.app.view.CommonTopBar>

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_below="@+id/default_top_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/icon_name_gender"
                android:background="@color/text_color_white"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:orientation="horizontal">

                <ac.airconditionsuit.app.view.RoundImageView
                    android:id="@+id/network_icon"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:scaleType="fitXY"
                    android:src="@drawable/user_dc" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:weightSum="1">

                    <ac.airconditionsuit.app.view.CommonButtonWithArrow
                        android:id="@+id/nick_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        app:textLabel="@string/nick_name"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="?android:attr/windowBackground" />

                    <ac.airconditionsuit.app.view.CommonButtonWithArrow
                        android:id="@+id/gender"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:gravity="center_vertical"
                        app:textLabel="@string/gender"/>

                </LinearLayout>

            </LinearLayout>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/home_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                app:textLabel="@string/add_new_home"/>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/change_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:textLabel="@string/change_birth"/>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/change_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:textLabel="@string/change_phone"/>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:textLabel="@string/change_password"/>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/change_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                app:textLabel="@string/change_email"/>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/common_agree_clause"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="1dp"
                android:layout_marginTop="40dp"
                app:textLabel="@string/common_agree_clause"/>

            <ac.airconditionsuit.app.view.CommonButtonWithArrow
                android:id="@+id/quit_account"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:rightArrow="false"
                app:textLabel="@string/quit_account"/>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>