<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ac.airconditionsuit.app.view.CommonTopBar
        android:id="@+id/default_top_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize">
    </ac.airconditionsuit.app.view.CommonTopBar>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center_horizontal"
        android:id="@+id/text_part1"
        android:text="@string/text_part1"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/text_part1"
        android:id="@+id/text_address"
        android:text="@string/text_address"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="100dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/logo"
        android:layout_below="@+id/text_address"
        android:src="@drawable/software_logo_dc"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_below="@+id/logo"
        android:id="@+id/text_version"
        android:text="@string/text_version"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:layout_below="@+id/text_version"
        android:id="@+id/text_part2"
        android:text="@string/text_part2"/>


</RelativeLayout>